@@ -11,6 +11,8 @@ import vltest_bootstrap
 
 test.scenarios('vlt')
 
-test.lint(fails=True, expect_filename=test.golden_filename)
+test.compile(verilator_flags2=['--binary'])
+
+test.execute()
 
 test.passes()
